--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,35 @@
 /* Reset some default styles */
-body, h1, p, ul, li {
+body, h1, ul, li {
     margin: 0;
     padding: 0;
+    color: white;
 }
 
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
+    color: white;
 }
 
-header {
-    background-color: #f8f9fa;
-    padding: 20px 0;
+
+
+p {
+    margin: 10px 0;
+    font-size: 20px;
 }
 
-nav ul {
-    list-style-type: none;
-    text-align: center;
+.copyright {
+    font-size: 12px;
+    color: black;
 }
 
-nav ul li {
-    display: inline;
-    margin: 0 10px;
-}
 
-nav ul li a {
-    text-decoration: none;
-    color: #333;
-}
 
 main {
-    padding: 20px;
     text-align: center;
+    background: grey;
+    height: auto;
+    width: auto;
 }
 
 footer {
@@ -43,6 +41,44 @@ footer {
     bottom: 0;
 }
 
-.active {
-    color: #ff0000; /* Change this to the color you want for the active link */
+
+/*#region Header*/
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: black;
+    padding: 20px 0;
 }
+
+/*#region Navigation*/
+nav ul {
+    list-style-type: none;
+    margin-right: 250px;
+}
+
+nav ul li {
+    display: inline;
+    margin: 0 10px;
+}
+
+nav ul li a {
+    text-decoration: none;
+    color: white;
+}
+
+.active {
+    color: grey;
+}
+/*#endregion Navigation*/
+
+/*#region Logo*/
+.logo {
+    margin-left: 250px;
+}
+/*#endregion Logo*/
+
+/*#endregion Header*/
+
+
+
