--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,13 @@ body, h1, ul, li {
 body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
-    color: white;
+    color: black;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    background: black;
 }
 
 
@@ -20,29 +26,46 @@ p {
 
 .copyright {
     font-size: 12px;
-    color: black;
+    color: greenyellow;
 }
 
 
 
 main {
     text-align: center;
-    background: grey;
+    background: red;
     height: auto;
     width: auto;
 }
 
 footer {
-    background-color: #f8f9fa;
+    color: greenyellow;
+    background-color: black;
     text-align: center;
-    padding: 20px;
-    position: fixed;
+    position: relative;
     width: 100%;
     bottom: 0;
 }
 
 
 /*#region Header*/
+@keyframes headerBackground {
+    0% { background-image: url('assets/rubi_logger.png'); }
+    25% { background-image: url('assets/btb.png'); }
+    50% { background-image: url('assets/TH.png'); }
+    75% { background-image: url('assets/FOP.png'); }
+    100% { background-image: url('assets/rubi_logger.png'); }
+
+}
+
+.subheader {
+    animation: headerBackground 10s infinite;
+    background: black;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 2000px; /* Adjust this value as needed */
+}
+
 header {
     display: flex;
     justify-content: space-between;
@@ -50,7 +73,6 @@ header {
     background-color: black;
     padding: 20px 0;
 }
-
 /*#region Navigation*/
 nav ul {
     list-style-type: none;
