--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,5 @@
 /* Reset some default styles */
-body, h1, ul, li {
-    margin: 0;
-    padding: 0;
+h1{
     color: white;
 }
 
@@ -11,31 +9,21 @@ body {
     color: black;
 }
 
-html, body {
+html {
     margin: 0;
     padding: 0;
     background: black;
 }
 
-
-
 p {
     margin: 10px 0;
     font-size: 20px;
+    color: white;
 }
 
 .copyright {
     font-size: 12px;
     color: greenyellow;
-}
-
-
-
-main {
-    text-align: center;
-    background: red;
-    height: auto;
-    width: auto;
 }
 
 footer {
@@ -50,21 +38,21 @@ footer {
 
 /*#region Header*/
 @keyframes headerBackground {
-    0% { background-image: url('assets/rubi_logger.png'); }
-    25% { background-image: url('assets/btb.png'); }
-    50% { background-image: url('assets/TH.png'); }
-    75% { background-image: url('assets/FOP.png'); }
-    100% { background-image: url('assets/rubi_logger.png'); }
+    0% { background-image: url('img/rubi_logger.png'); }
+    25% { background-image: url('img/btb.png'); }
+    50% { background-image: url('img/TH.png'); }
+    75% { background-image: url('img/FOP.png'); }
+    100% { background-image: url('img/rubi_logger.png'); }
 
 }
 
-.subheader {
+.slideshow {
     animation: headerBackground 10s infinite;
-    background: black;
-    background-size: contain;
-    background-repeat: no-repeat;
-    height: 2000px; /* Adjust this value as needed */
+    background: no-repeat black;
+    height: 1000px;
 }
+
+/*#region Header*/
 
 header {
     display: flex;
@@ -73,6 +61,12 @@ header {
     background-color: black;
     padding: 20px 0;
 }
+
+
+.logo {
+    margin-left: 250px;
+}
+
 /*#region Navigation*/
 nav ul {
     list-style-type: none;
@@ -93,14 +87,9 @@ nav ul li a {
     color: grey;
 }
 /*#endregion Navigation*/
-
-/*#region Logo*/
-.logo {
-    margin-left: 250px;
-}
-/*#endregion Logo*/
-
 /*#endregion Header*/
+
+
 
 
 
