--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,14 @@ html, body {
     height: 100%;
     margin: 0;
     padding: 0;
-    font-family: Arial, sans-serif;
+    font-family: 'Open Sans', sans-serif; /* Use Open Sans for body text */
     background-color: #000; /* Black background */
     color: #fff; /* White text */
+}
+
+h1, h2 {
+    font-family: 'Montserrat', sans-serif; /* Use Montserrat for headings */
+    color: #fff;
 }
 
 .wrapper {
@@ -26,7 +31,7 @@ header {
 }
 
 nav {
-    margin-top: 0.5em;
+    margin-top: 0.5em; /* Reduced margin to make it closer to the logo */
 }
 
 nav ul {
@@ -65,14 +70,6 @@ main {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
 }
 
-h1, h2 {
-    color: #fff;
-}
-
-p {
-    color: #ccc; /* Light gray */
-}
-
 .projects-list {
     display: flex;
     flex-direction: column;
@@ -87,10 +84,6 @@ p {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
     width: 100%;
     max-width: 600px;
-}
-
-.project h2 {
-    color: #fff;
 }
 
 .project img {
@@ -122,7 +115,7 @@ p {
     border-radius: 8px;
 }
 
-.video-container iframe {
+video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
