--- a/styles.css
+++ b/styles.css
@@ -53,14 +53,14 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #fff;
+    color: white !important;
     text-decoration: none;
     font-weight: bold;
     transition: color 0.3s;
 }
 
 nav ul li a.selected {
-    color: whitesmoke;
+    color: greenyellow !important;
 }
 
 nav ul li a:hover {
@@ -89,7 +89,6 @@ main {
 }
 
 iframe{
-
     border: transparent;
 }
 
@@ -139,21 +138,17 @@ a:visited{
 
 .video-container {
     position: relative;
-    padding-bottom: 56.25%;
-    height: 0;
     overflow: hidden;
-    max-width: 100%;
-    background: #000;
-    border-radius: 8px;
+    width: 100%;
+    padding-top: 56.25%; /* 16:9 Aspect Ratio */
 }
 
-video-container iframe {
+.video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    border: 0;
 }
 
 footer {
